# api_rest_python

./: .env  .gitignore  README.md  docker-compose.yml  pyproject.toml
api_users/: main.py
api_users/models/: user_connection.py
api_users/routers/: auth.py  users.py
api_users/schemas/: user_schema.py
api_users/services/shared/: auth_service.py  users_db.py  users_service.py
sql/: init.sql
